Design fixes on mobile + missing small_no_avatar image

--- a/app/assets/stylesheets/other/_list-group.sass
+++ b/app/assets/stylesheets/other/_list-group.sass
@@ -4,6 +4,7 @@
   .list-item
     flex: 1
     flex-basis: 100%
+    width: 100%
     margin: 5px 0
     a
       color: inherit
