--- a/app/assets/stylesheets/themes/colors.sass
+++ b/app/assets/stylesheets/themes/colors.sass
@@ -1,5 +1,7 @@
 header.navbar.navbar-default.navbar-fixed-top
   background-color: $color-main-primary
+  #header-navbar
+    background-color: $color-main-primary
 
 main#main-block > #home-layout
   .left-column, .right-column
